[package]
name = "hpi-analyzer"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "A semantic analyzer and type-annotator for the HPI programming language"

[dependencies]
hpi-parser = { path = "../hpi-parser", version = "0.1.0" }
