[package]
name = "hpi-cli"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.24", features = ["derive"] }
hpi-analyzer = { path = "../hpi-analyzer" }
hpi-interpreter-tree = { path = "../hpi-interpreter-tree" }
hpi-ls = { path = "../hpi-ls" }
reqwest = { version = "0.11.20", features = ["blocking"] }
tempfile = "3.3.0"
tokio = "1.26.0"
