[package]
name = "hpi-interpreter-tree"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features = ["js"]}
hpi-analyzer = { path = "../hpi-analyzer", version = "0.1.0" }
reqwest = "0.11.20"

[dev-dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "rustls"] }

[[example]]         # <--- declare the executable
name = "main"
