[package]
name = "hpi-ls"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpi-analyzer = { path = "../hpi-analyzer/", version = "0.1.0" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
