[package]
name = "hpi-transpiler-c"
version = "0.1.0"
authors.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# clap = "4.5.1"
# hpi-analyzer = { version = "0.1.0", path = "../hpi-analyzer" }


[dependencies]
hpi-analyzer = { version = "0.1.0", path = "../hpi-analyzer" }
